--- a/src/component/CartContainer/CartCOntainer.css
+++ b/src/component/CartContainer/CartCOntainer.css
@@ -1,5 +1,6 @@
 .full-container{
-     width:100% ;
+     width: 100%;
+     height: 100vh;
      background-color: #F2F4FA;
      padding: 20px 100px;
 }
