--- a/src/component/Cart/Cart.css
+++ b/src/component/Cart/Cart.css
@@ -19,6 +19,10 @@
     margin: 0px auto;
     border-radius: 10px;
 }
+.img-div img{
+    height: 100%;
+    width: 100%;
+}
 .card-details{
     padding-left: 20px;
 }
