--- a/src/component/CartContainer/CartCOntainer.css
+++ b/src/component/CartContainer/CartCOntainer.css
@@ -17,3 +17,19 @@ h3{
     font-weight: 500;
     size: 25px;
 }
+@media only screen and (max-width:1545px) {
+        .full-container{
+           
+            padding: 20px 20px;
+        }
+}
+@media only screen and (max-width:1430px){
+    .all-cart{
+        grid-template-columns: repeat(2,1fr);
+    }
+}
+@media only screen and (max-width:1070px){
+    .all-cart{
+        grid-template-columns: repeat(1,1fr);
+    }
+}
