--- a/src/component/ExerciseDetails/ExerciseDetails.css
+++ b/src/component/ExerciseDetails/ExerciseDetails.css
@@ -1,6 +1,6 @@
 .exercise-container{
     width: 650px;
-    height: 100vh;
+    height: 1000px;
     background-color: white;
     padding: 15px;
     position: sticky;
